[tool.poetry]
name = "media-agent"
version = "0.1.0"
description = "Scrape Twitter and Reddit, summarize the results with an LLM, and chat with them in an interactive terminal."
authors = ["Ishan Pandey"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
langchain = "^0.0.174"
python-dotenv = "^1.0.0"
openai = "^0.27.7"
simple-term-menu = "^1.6.1"
rich = "^13.3.5"
praw = "^7.7.0"
chromadb = "^0.3.25"
tiktoken = "^0.4.0"
tweepy = "^4.14.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
